traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:4: error: Boolean does not take parameters
  while (posfinal() == false){
                 ^TraversalZigZag:6: error: not found: value x
       if (x==6 && y == 6){
           ^TraversalZigZag:7: error: not found: value x
        setPos(x,y)
               ^TraversalZigZag:9: error: not found: value finalPos
        finalPos=true
        ^TraversalZigZag:14: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
        counter + = 1
                ^TraversalZigZag:16: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
      y + = 1
        ^TraversalZigZag:20: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
        counter + = 1
                ^