traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var counter : Int = 0
  var posfinal : Boolean = false
  var y : Int = 0
  while (posfinal() == false){
    for (round <- 0 to 6){
   	  if (x==6 && y == 6){
        setPos(x,y)
        writeMessage(counter)
        finalPos=true
      }
      for (x <- 0 to 6){
    	  setPos(x,y)
     	 writeMessage(counter)
    	  counter + = 1
      }
      y + = 1
      for (x <- 0 to 6){
        setPos(6-x,y)
        writeMessage(counter)
        counter + = 1
      }
    }
  }
}